BYPS-14: suppress generator warning "Illegal reflective access..."